# NAQ

./: .gitignore  Dockerfile  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
naq/: ai_engine.py  analytics.py  banner.py  cli.py  config.json  config.py  executor.py  safety.py  schema_loader.py  test.py  utils.py  web_server.py
naq/templates/: index.html
querymind/: __init__.py  ai_engine.py  banner.py  cli.py  config.py  db.py  executor.py  safety.py  schema_loader.py  test_groq.py  test_groq2.py  utils.py
web_module/: index.html  test.py
